feat: add shared documents and discussions
